--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/storage": "2.1.3",
-    "cordova-plugin-vr-view": "file:cordova-plugin-vr-view",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
@@ -36,10 +35,5 @@
     "@ionic/app-scripts": "3.1.9",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project",
-  "cordova": {
-    "plugins": {
-      "cordova-plugin-vr-view": {}
-    }
-  }
+  "description": "An Ionic project"
 }
